--- a/webMetics/Views/Participante/VerDatosParticipante.cshtml
+++ b/webMetics/Views/Participante/VerDatosParticipante.cshtml
@@ -55,12 +55,12 @@
                 <table class="table table-striped" id="tblCustomers">
                     <thead>
                         <tr>
-                            <th scope="col">Nombre completo</th>
-                            <th scope="col">Correo institucional</th>
-                            <th scope="col">Módulos inscritos</th>
-                            <th class="text-center" scope="col" style="width: 10%">Horas<br>por módulo</th>
-                            <th class="text-center" scope="col" style="width: 10%">Total de<br>horas inscritas</th>
-                            <th class="text-center" scope="col" style="width: 10%">Horas<br>aprobadas</th>
+                            <th scope="col">Nombre Completo</th>
+                            <th scope="col">Correo Institucional</th>
+                            <th scope="col">Módulos Matriculados</th>
+                            <th class="text-center" scope="col" style="width: 10%">Horas<br>por Módulo</th>
+                            <th class="text-center" scope="col" style="width: 10%">Horas<br>Matriculadas</th>
+                            <th class="text-center" scope="col" style="width: 10%">Horas<br>Aprobadas</th>
                         </tr>
                     </thead>
 
@@ -104,8 +104,7 @@
                             <td class="text-center">
                                 <span>@ViewBag.Participante.horasAprobadas</span>
                             </td>
-                            <td class="">
-                            </td>
+                            <td class=""></td>
                         </tr>
                     </tbody>
                 </table>
