Corrección de estilo de botón "Regresar".

--- a/webMetics/Views/Inscripcion/Inscribir.cshtml
+++ b/webMetics/Views/Inscripcion/Inscribir.cshtml
@@ -18,7 +18,9 @@
             }
         </div>
         <div class="card-footer text-muted">
-            <a href="../Grupo/ListaGruposDisponibles" class="btn btn-primary">Regresar</a>
+            <div class="d-flex justify-content-center my-4">
+                <a asp-action="ListaGruposDisponibles" asp-controller="Grupo" class="btn btn-primary">Regresar</a>
+            </div>
         </div>
     </div>
 </body>
