--- a/webMetics/Views/Participante/InformacionPersonal.cshtml
+++ b/webMetics/Views/Participante/InformacionPersonal.cshtml
@@ -137,7 +137,7 @@
                     </table>
                 </div>
             }
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center my-4">
                 <a asp-action="ListaGruposDisponibles" asp-controller="Grupo" class="btn btn-primary">Regresar</a>
             </div>
         </div>
