--- a/webMetics/Views/Categoria/ListaCategorias.cshtml
+++ b/webMetics/Views/Categoria/ListaCategorias.cshtml
@@ -47,7 +47,7 @@
                 @if (ViewBag.Categorias == null)
                 {
                     <h5 class="text-center">No hay categorías creadas</h5>
-                    <div class="d-flex justify-content-center">
+                    <div class="d-flex justify-content-center my-4">
                         <a href="/Categoria/CrearCategoria" class="btn btn-primary" role="button" style="float: right;width:20%;height:105%">Crear categoría</a>
                     </div>
                 }
