--- a/webMetics/Views/Participante/ListaParticipantes.cshtml
+++ b/webMetics/Views/Participante/ListaParticipantes.cshtml
@@ -147,7 +147,7 @@
                     </tbody>
                 </table>
             }
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center my-4">
                 <a asp-action="ListaGruposDisponibles" asp-controller="Grupo" class="btn btn-primary">Regresar</a>
             </div>
         </div>
