--- a/webMetics/Views/Participante/VerDatosParticipante.cshtml
+++ b/webMetics/Views/Participante/VerDatosParticipante.cshtml
@@ -127,7 +127,7 @@
 
             <hr />
 
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center my-4">
                 <a href="../Participante/VerParticipantes" class="btn btn-primary">Regresar</a>
             </div>
         </div>
