--- a/webMetics/Views/TipoActividad/ListaTiposActividad.cshtml
+++ b/webMetics/Views/TipoActividad/ListaTiposActividad.cshtml
@@ -43,7 +43,7 @@
                 @if (ViewBag.TiposActividad == null)
                 {
                     <h5 class="text-center"> No hay actividad disponibles</h5>
-                    <div class="d-flex justify-content-center">
+                    <div class="d-flex justify-content-center my-4">
                         <a href="/TipoActividad/CrearTipoActividad" class="btn btn-primary" role="button" style="width:25%;height:105%">Crear nueva actividad</a>
                     </div>
                 }
