--- a/webMetics/Views/Usuario/ParticipanteRegistrado.cshtml
+++ b/webMetics/Views/Usuario/ParticipanteRegistrado.cshtml
@@ -6,15 +6,17 @@
         <div class="card-header">
             <h2>@ViewBag.Titulo</h2>
         </div>
-        <div class="card-body ">
+        <div class="card-body">
             <h5> @ViewBag.Message</h5>
             @if (ViewBag.Correo != null)
             {
                 <p>@ViewBag.Correo</p>
             }
         </div>
-        <div class="d-flex justify-content-center">
-            <a asp-action="ListaGruposDisponibles" asp-controller="Grupo" class="btn btn-primary">Regresar</a>
+        <div class="card-footer text-muted">
+            <div class="d-flex justify-content-center my-4">
+                <a asp-action="ListaGruposDisponibles" asp-controller="Grupo" class="btn btn-primary">Regresar</a>
+            </div>
         </div>
     </div>
 </body>
