Se elimina una columna de la base de datos, se combina Seccion y Unidad Academica.

--- a/webMetics/Views/Inscripcion/ExportarParticipantes.cshtml
+++ b/webMetics/Views/Inscripcion/ExportarParticipantes.cshtml
@@ -30,7 +30,7 @@
             </td>
 
             <td style='border: 1px solid #ccc'>
-                @participante.unidadAcademica
+                @participante.seccion
             </td>
 
             <td style='border: 1px solid #ccc'>
