--- a/webMetics/Views/Participante/InformacionPersonal.cshtml
+++ b/webMetics/Views/Participante/InformacionPersonal.cshtml
@@ -68,7 +68,7 @@
                             <tr>
                                 <td class="">@nombreCompleto</td>
                                 <td class="">@ViewBag.Participante.numeroIdentificacion</td>
-                                <td class="">@ViewBag.Participante.unidadAcademica</td>
+                                <td class="">@ViewBag.Participante.seccion</td>
                                 <td class="">@ViewBag.Participante.correo</td>
                                 <td class="">@ViewBag.Participante.condicion</td>
                                 <td class="">@ViewBag.Participante.telefonos</td>
