Fix a Views relacionados a datos de Participante.

--- a/webMetics/Views/Participante/VerParticipantes.cshtml
+++ b/webMetics/Views/Participante/VerParticipantes.cshtml
@@ -101,7 +101,7 @@
                                 nombreCompleto += " " + participante.segundoApellido;
                             }
                             <tr>
-                                <td>@participante.unidadAcademica</td>
+                                <td>@participante.seccion</td>
                                 <td>@participante.nombre</td>
                                 <td>@participante.primerApellido</td>
                                 <td>@participante.segundoApellido</td>
