Corrección dirección de botón.

--- a/webMetics/Views/Participante/VerParticipantes.cshtml
+++ b/webMetics/Views/Participante/VerParticipantes.cshtml
@@ -69,7 +69,7 @@
                             @Html.ActionLink("   Word", "ExportarParticipantesWord", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
                         </div>
                         <div class="mx-1">
-                            @Html.ActionLink("   Agregar", "FormularioUsuario", "Participante", new { }, new { @class = "btn btn-primary bi bi-person-plus" })
+                            @Html.ActionLink("   Agregar", "FormularioParticipante", "Participante", new { }, new { @class = "btn btn-primary bi bi-person-plus" })
                         </div>
                     </div>
                 </div>
