--- a/webMetics/Views/Participante/InformacionPersonal.cshtml
+++ b/webMetics/Views/Participante/InformacionPersonal.cshtml
@@ -68,10 +68,10 @@
                             <tr>
                                 <td class="">@nombreCompleto</td>
                                 <td class="">@ViewBag.Participante.numeroIdentificacion</td>
-                                <td class="">@ViewBag.Participante.seccion</td>
+                                <td class="">@ViewBag.Participante.unidadAcademica</td>
                                 <td class="">@ViewBag.Participante.correo</td>
                                 <td class="">@ViewBag.Participante.condicion</td>
-                                <td class="">@ViewBag.Participante.telefonos</td>
+                                <td class="">@ViewBag.Participante.telefono</td>
                                 <td class="">
                                     @Html.ActionLink(" ", "EditarParticipante", "Participante", new { idParticipante = ViewBag.Participante.idParticipante }, new { @class = "text-secondary bi bi-pencil-square" })
                                 </td>
