--- a/webMetics/Views/Usuario/ParticipanteRegistrado.cshtml
+++ b/webMetics/Views/Usuario/ParticipanteRegistrado.cshtml
@@ -14,7 +14,7 @@
             }
         </div>
         <div class="card-footer text-muted">
-            <div class="d-flex justify-content-center my-4">
+            <div class="d-flex justify-content-center">
                 <a asp-action="ListaGruposDisponibles" asp-controller="Grupo" class="btn btn-primary">Regresar</a>
             </div>
         </div>
