--- a/webMetics/Views/Asesor/ListaAsesores.cshtml
+++ b/webMetics/Views/Asesor/ListaAsesores.cshtml
@@ -51,7 +51,7 @@
 
         <div class="d-flex justify-content-end">
             <div class="mx-1">
-                @using (Html.BeginForm("AgregarAsesor", "Asesor", FormMethod.Post))
+                @using (Html.BeginForm("CrearAsesor", "Asesor", FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
                     <button type="submit" class="btn btn-primary">
@@ -86,22 +86,22 @@
                         @foreach (var asesor in ViewBag.Asesores)
                         {
                             var nombreCompleto = asesor.nombre;
-                            nombreCompleto += " " + asesor.apellido1;
-                            if (asesor.apellido2 != "-")
+                            nombreCompleto += " " + asesor.primerApellido;
+                            if (asesor.segundoApellido != "-")
                             {
-                                nombreCompleto += " " + asesor.apellido2;
+                                nombreCompleto += " " + asesor.segundoApellido;
                             }
 
                             <tr>
                                 <td>@nombreCompleto</td>
-                                <td>@asesor.id</td>
+                                <td>@asesor.idAsesor</td>
                                 <td>@asesor.descripcion</td>
-                                <td>@asesor.telefonos</td>
+                                <td>@asesor.telefono</td>
                                 <td>
-                                    @Html.ActionLink(" ", "EditarAsesor", "Asesor", new { idAsesor = asesor.id }, new { @class = "btn btn-outline-secondary bi bi-pencil-square" })
+                                    @Html.ActionLink(" ", "EditarAsesor", "Asesor", new { idAsesor = asesor.idAsesor }, new { @class = "btn btn-outline-secondary bi bi-pencil-square" })
                                 </td>
                                 <td>
-                                    <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@asesor.id')">
+                                    <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@asesor.idAsesor')">
                                         <i class="bi bi-trash"></i>
                                     </button>
                                 </td>
