--- a/webMetics/Views/Inscripcion/ExportarParticipantes.cshtml
+++ b/webMetics/Views/Inscripcion/ExportarParticipantes.cshtml
@@ -30,7 +30,7 @@
             </td>
 
             <td style='border: 1px solid #ccc'>
-                @participante.seccion
+                @participante.unidadAcademica
             </td>
 
             <td style='border: 1px solid #ccc'>
@@ -38,7 +38,7 @@
             </td>
 
             <td style='border: 1px solid #ccc'>
-                @participante.telefonos
+                @participante.telefono
             </td>
         </tr>
     }
