--- a/webMetics/Views/Usuario/FormularioRegistro.cshtml
+++ b/webMetics/Views/Usuario/FormularioRegistro.cshtml
@@ -73,6 +73,9 @@
                                 @Html.LabelFor(usuarioModel => usuarioModel.numeroIdentificacion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
                                 @Html.TextBoxFor(usuarioModel => usuarioModel.numeroIdentificacion, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
                                 @Html.ValidationMessageFor(usuarioModel => usuarioModel.numeroIdentificacion, "", new { @class = "text-danger" })
+                                <small class="form-text text-muted">
+                                    Formato de cédula: 1-1100-1100 (con guiones)
+                                </small>
                             </div>
                         </div>
                         <div class="form-group mt-1">
@@ -91,14 +94,14 @@
                             @Html.ValidationMessageFor(usuarioModel => usuarioModel.departamento, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group mt-1">
-                            @Html.LabelFor(usuarioModel => usuarioModel.seccion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownListFor(usuarioModel => usuarioModel.seccion, new SelectList(Enumerable.Empty<SelectListItem>()), "Seleccione una unidad académica...", new { @class = "form-control", id = "seccionDropdown" })
-                            @Html.ValidationMessageFor(usuarioModel => usuarioModel.seccion, "", new { @class = "text-danger" })
+                            @Html.LabelFor(usuarioModel => usuarioModel.unidadAcademica, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                            @Html.DropDownListFor(usuarioModel => usuarioModel.unidadAcademica, new SelectList(Enumerable.Empty<SelectListItem>()), "Seleccione una unidad académica...", new { @class = "form-control", id = "seccionDropdown" })
+                            @Html.ValidationMessageFor(usuarioModel => usuarioModel.unidadAcademica, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group mt-1">
-                            @Html.LabelFor(usuarioModel => usuarioModel.telefonos, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.TextBoxFor(usuarioModel => usuarioModel.telefonos, new { @class = "form-control", @maxlength = "64", @minlength = "7", @autocomplete = "off" })
-                            @Html.ValidationMessageFor(usuarioModel => usuarioModel.telefonos, "", new { @class = "text-danger" })
+                            @Html.LabelFor(usuarioModel => usuarioModel.telefono, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                            @Html.TextBoxFor(usuarioModel => usuarioModel.telefono, new { @class = "form-control", @maxlength = "64", @minlength = "7", @autocomplete = "off" })
+                            @Html.ValidationMessageFor(usuarioModel => usuarioModel.telefono, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group mt-1">
                             @Html.LabelFor(usuarioModel => usuarioModel.condicion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
@@ -145,7 +148,7 @@ else
         $('#areaDropdown').click(function () {
             var areaName = $(this).val();
 
-            // Clear departamento and seccion dropdowns
+            // Clear departamento and unidadAcademica dropdowns
             $('#departamentoDropdown').empty().append('<option value="">Seleccione una facultad...</option>');
             $('#seccionDropdown').empty().append('<option value="">Seleccione una unidad académica...</option>');
 
@@ -178,7 +181,7 @@ else
                     data: { departamentoName: departamentoName },
                     dataType: 'json',
                     success: function (data) {
-                        // Update seccion dropdown with fetched data
+                        // Update unidadAcademica dropdown with fetched data
                         $.each(data, function (index, value) {
                             $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
                         });
@@ -200,8 +203,8 @@ else
             var departamentoName = $(this).val();
             var areaName = $('#areaDropdown').val();
 
-            // Clear seccion dropdown
-            $('#seccionDropdown').empty().append('<option value="">Seleccione una sección...</option>');
+            // Clear unidadAcademica dropdown
+            $('#seccionDropdown').empty().append('<option value="">Seleccione una unidad académica...</option>');
 
             if (departamentoName !== '') {
                 // Make AJAX request to fetch secciones for selected departamento
@@ -211,7 +214,7 @@ else
                     data: { areaName: areaName, departamentoName: departamentoName },
                     dataType: 'json',
                     success: function (data) {
-                        // Update seccion dropdown with fetched data
+                        // Update unidadAcademica dropdown with fetched data
                         $.each(data, function (index, value) {
                             $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
                         });
